# stock-platform

./: .gitignore  README.md
apps/calenderapp/: .gitignore  README.md  manage.sh  verify_local.sh
apps/calenderapp/.github/workflows/: ci.yml
apps/calenderapp/backend/: init_db.py  main.py  requirements.txt  seed_db.py
apps/calenderapp/backend/app/: __init__.py  db.py  scheduler.py  settings.py
apps/calenderapp/backend/config/: api_config.py
apps/calenderapp/docs/: development_log_20260404.md  event-review.md  optimization_report.md  partition-design.md  system_evaluation_report.md  test_report_20260404.md  test_report_template.md  投研平台功能对比分析报告_2026-04-06.md  涨停复盘报告技术方案_2026-04-06.md  涨停股票模块技术报告_20260404.md
apps/calenderapp/frontend/: .env.example  index.html  package-lock.json  package.json
apps/calenderapp/scripts/: backup_cron.sh  sync_cron.sh
apps/eventradar/: .env.example  .gitignore  Makefile  README.md  manage.sh  pyproject.toml  refresh-all.sh
apps/eventradar/docs/: SIMPLE_ARCHITECTURE.md
apps/eventradar/src/eventradar/: __init__.py  api.py  cli.py  config.py  service.py
apps/eventradar/src/eventradar/normalize/: __init__.py  event_type_map.py  ids.py  schemas.py
apps/eventradar/src/eventradar/normalize/enrichers/: __init__.py  future_date_parser.py  importance_rules.py  industry_mapper.py  leader_scorer.py
apps/eventradar/src/eventradar/sources/: __init__.py  akshare_client.py
apps/eventradar/src/eventradar/sources/adapters/: __init__.py  company_calendar_em.py  earnings_forecast_em.py  insider_trade_xq.py  ipo_cninfo.py  macro_calendar_ws.py
apps/eventradar/src/eventradar/storage/: __init__.py  ddl.py  duckdb_backend.py
apps/stockkb/: Makefile  README.md  pyproject.toml
apps/stockkb/docs/: DEPLOYMENT.md  SIMPLE_ARCHITECTURE.md
apps/stockkb/scripts/: manage.sh  start_api.sh
apps/stockkb/src/stockrag/: __main__.py  api.py  api_models.py  cli.py  config.py  metadata.py  minio_backend.py  service.py  text_normalizer.py
apps/stockkb/src/stockrag/event_kb/: config.py  ids.py  market_event_builder.py  market_event_judge.py
apps/stockkb/src/stockrag/event_kb/extractors/: __init__.py  basic_info_extractor.py  core_logic_extractor.py  event_normalizer.py  simple_llm_extractor.py
apps/stockkb/src/stockrag/event_kb/parsers/: __init__.py  markdown_parser.py
apps/stockkb/src/stockrag/event_kb/pipeline/: __init__.py  extract_simple_report.py
apps/stockkb/src/stockrag/event_kb/schemas/: __init__.py  markdown.py  market_event.py  simple.py
apps/stockkb/src/stockrag/event_kb/services/: __init__.py  extraction_service.py
apps/stockkb/src/stockrag/event_kb/storage/: __init__.py  ddl.py  duckdb_backend.py
apps/stockkb/tests/: test_core_logic_extractor.py  test_event_normalizer.py  test_event_source_fields.py  test_market_event_builder.py  test_market_event_review_api.py  test_safety_guards.py  test_simple_llm_extractor.py
docs/: WSL中SSH服务配置.txt  monorepo-migration.md  局域网访问配置.md
scripts/: dev-check.sh  dev-down.sh  dev-status.sh  dev-up-lan.sh  dev-up.sh
(+116 files in other folders)
