[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventradar"
version = "0.0.1"
description = "Forward-looking event radar for the A-share market — placeholder skeleton"
requires-python = ">=3.10"
dependencies = [
  # Core data + storage. akshare-driven adapters live in this package now,
  # so akshare and pyarrow are required for a working install. To run a
  # stripped-down read-only deployment (API + replica only, no ingestion),
  # split deps into a separate extra later.
  "duckdb>=1.0.0",
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.30.0",
  "pandas>=2.0.0",
  "akshare>=1.18.0",
  "pyarrow>=15.0.0",       # parquet writer for raw_cache
  "requests>=2.32.0",      # akshare's transport
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
eventradar = "eventradar.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
