[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockrag"
version = "0.1.0"
description = "Structured stock event knowledge-base service for markdown research reports"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0.0",
  "fastapi>=0.115.0",
  "minio>=7.2.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
stockkb = "stockrag.cli:main"
stockrag = "stockrag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
